-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.1
-
None
-
-
e61d31c06 (dev), 67b9c88b2 (6.10)
Qt crashes on Wayland when drop action shows popup window or menu when drag and drop is still active and it's cancelled by the ESC key.
Easy steps to reproduce:
- Drag and drop a file in QtCreator "Projects" panel.
- QtCreator opens following popup:

- Press ESC key - crash.
I was able to reproduce similar crash on drop without pressing ESC key - depends on situation in the application.
| For Gerrit Dashboard: QTBUG-139056 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 667609,2 | wayland: Drag and drop fixes | dev | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 667975,2 | wayland: Check a drag is still ongoing after invoking user code | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 671087,2 | wayland: Check a drag is still ongoing after invoking user code | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |