wayland: Check a drag is still ongoing after invoking user code

QWindowSystemInterface::handleDrop is dispatched to application code
syncronously, this could perform an operation that cancels the existing
drag.

Also renamed a variable that shadowed a variable in the same method.

Fixes: QTBUG-139056
Change-Id: Ia4e016ca124edc9f2f551616f52e1caafdf2f07e
Reviewed-by: Błażej Szczygieł <mumei6102@gmail.com>
Reviewed-by: David Redondo <qt@david-redondo.de>
(cherry picked from commit e61d31c06ecf1e9a5e033ee78da96a17965eef17)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>